--- a/public/stylesheets/home1.css
+++ b/public/stylesheets/home1.css
@@ -142,15 +142,31 @@ button.btn-secondary {
     background-color: #ffffff;
     margin-bottom: 10px;
 }
-.progress {
-    width: 300px;
-    background-color: aquamarine;
+
+
+progress[value]::-webkit-progress-value {
+    background-color: #bd7b67;
+}
+progress[value]::-webkit-progress-bar {
+    background-color: #e2ddc8;
+    width: 400px;
 }
 
-progress[value]::-webkit-progress-value {background-color: #bd7b67;}
-progress[value]::-webkit-progress-bar {background-color: #e2ddc8;}
-progress{border: solid #96534a;}
 
+.progress {
+    width: 300px; 
+    height: 13px; 
+    background-color: #e2ddc8;
+    border: solid 1px#96534a;
+}
+.progressvalue {
+    color: #fff;
+    height: 14px;
+    font-size: 10px; 
+    text-align: start;
+    background-color: #bd7b67;
+    padding-left: 5px;
+}
 .bar {
     width: 80px; 
     height: 13px; 
@@ -163,6 +179,8 @@ progress{border: solid #96534a;}
     text-align: start;
     padding-left: 3px;
 }
+
+
 @media (max-width: 1000px) {
     .group, .group2 {display: block;}
     .boxbax, .item1 {width: auto; }
@@ -171,3 +189,59 @@ progress{border: solid #96534a;}
     .group2 {display: block;}
     html {height: fit-content;}
 }
+
+
+@property --p{
+    syntax: '<number>';
+    inherits: true;
+    initial-value: 0;
+  }
+  
+  .pie {
+    --p:20;
+    --b:15px;
+    --c:darkred;
+    --w:80px;
+    
+    width:var(--w);
+    aspect-ratio:1;
+    position:relative;
+    display:inline-grid;
+    margin:5px;
+    place-content:center;
+    font-size:25px;
+    font-weight:bold;
+    font-family:sans-serif;
+  }
+  .pie:before,
+  .pie:after {
+    content:"";
+    position:absolute;
+    border-radius:50%;
+  }
+  .pie:before {
+    inset:0;
+    background:
+      radial-gradient(farthest-side,var(--c) 98%,#0000) top/var(--b) var(--b) no-repeat,
+      conic-gradient(var(--c) calc(var(--p)*1%),#0000 0);
+    -webkit-mask:radial-gradient(farthest-side,#0000 calc(99% - var(--b)),#000 calc(100% - var(--b)));
+            mask:radial-gradient(farthest-side,#0000 calc(99% - var(--b)),#000 calc(100% - var(--b)));
+  }
+  .pie:after {
+    inset:calc(50% - var(--b)/2);
+    background:var(--c);
+    transform:rotate(calc(var(--p)*3.6deg)) translateY(calc(50% - var(--w)/2));
+  }
+  .animate {
+    animation:p 1s .5s both;
+  }
+  .no-round:before {
+    background-size:0 0,auto;
+  }
+  .no-round:after {
+    content:none;
+  }
+  @keyframes p {
+    from{--p:0}
+  }
+  
