--- a/views/student/layouts/navbar.ejs
+++ b/views/student/layouts/navbar.ejs
@@ -57,8 +57,8 @@
             <li class="nav-item "><a class="nav-link"  href="/auth/login" style="color: #ffffff;">Login</a></li>
         <% } %>
     </ul>
-    <ul class="navbar-nav mb-0 h5 ms-auto">
-      
+    <ul class="navbar-nav mb-0 ms-auto">
+      <li class="nav-item nav-link" style="color: #ffffff;" ><%= person.name %></li>
       <li class="nav-item "><a class="nav-link"  href="/auth/logout" style="color: #ffffff;"><i class="fa fa-power-off" style="font-size: 25px;;align-items: center; " ></i></a></li>     
     </ul>
   </div>
