--- a/views/student/layouts/project-middle.ejs
+++ b/views/student/layouts/project-middle.ejs
@@ -3,6 +3,9 @@
   a{
     text-decoration: none;
   }
+  a:hover {
+    color: #000000;
+  }
   .projectbox{
     width: 150px;
     height: 200px;
@@ -14,9 +17,6 @@
     border-radius: 10px;
     font-size: 18px;
     text-align: center;
-  }
-  .projectbox:hover {
-    box-shadow: 0 0 10px 5px #ffb3fc;
   }
   .quantico-regular {
     font-family: "Quantico", sans-serif;
@@ -64,7 +64,7 @@
                             <div class="projectbox wrapbox">
                               <p>Project Quiz 1</p>
                               <% if(RecommendaResult[0].TicketBooking_SystemPercent >= 50) { count = count-1%> <%# Follow node %> 
-                                <a href="/project-Ticket_Booking_System">click</a>
+                                <div style="background-color: #fff;"><a href="/project-Ticket_Booking_System">Click</a></div>
                                 <br><br><p><%= PrjQuiz1Score %></p>
                               <% }else{ %>
                                 <p style="font-size: 14px; color: #535353;">ทำแบบทดสอบบทที่ 1-4 เพื่อปลดล็อก</p>
@@ -74,7 +74,7 @@
                             <div class="projectbox wrapbox">
                               <p>Project Quiz 2</p>
                               <% if(RecommendaResult[0].PointofSales_SystemPercent >= 75) {count = count-1 %> <%# Follow node %> 
-                                  <a href="/project-Point_of_Sales_System">click</a>
+                                  <div style="background-color: #fff;"><a href="/project-Point_of_Sales_System">Click</a></div>
                                   <br><br><p><%= PrjQuiz2Score %></p>
                                   <% }else{ %>
                                     <p style="font-size: 14px; color: #535353;">ทำแบบทดสอบบทที่ 5-6 เพื่อปลดล็อก</p>
@@ -84,7 +84,7 @@
                             <div class="projectbox wrapbox">
                               <p>Project Quiz 3</p>
                               <% if(RecommendaResult[0].ProjectQUIZ3Percent === 100) {count = count-1 %> <%# Follow node %> 
-                                <a href="/project-Project_QUIZ3">click</a>
+                                <div style="background-color: #fff;"><a href="/project-Project_QUIZ3">Click</a></div>
                                 <br><br><p><%= PrjQuiz3Score %></p>
                                 <% }else{ %>
                                   <p style="font-size: 14px; color: #535353;">ทำแบบทดสอบบทที่ 7-8 เพื่อปลดล็อก</p>
