--- a/views/teacher/class-Student.ejs
+++ b/views/teacher/class-Student.ejs
@@ -4,10 +4,11 @@
             <thead>
               <tr>
                 <th scope="col" class="col-1">#</th>
-                <th scope="col-1" class="col-4"><%=Studentresult[0].email %></th>
+                <th scope="col-1" class="col-1"><%=Studentresult[0].email %></th>
                 <th scope="col-1" class="col-1"><%=Studentresult[0].ClassName %></th>
                 <th scope="col" class="col-2 text-start">Project</th>
-                <th scope="col" class="col-2 text-start"> Score</th>
+                <th scope="col" class="col-2 text-start">Score</th>
+                <th scope="col" class="col-4 text-start">Chart</th>
                 </th>
               </tr>
             </thead>
@@ -77,6 +78,43 @@
                                     <br> &nbsp &nbspQuiz | <%=Studentresult[i].Function %> <br>
                                 <% } %>
                             </td>
+                                <td>
+                                    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+                                    <body>
+                                    
+                                    <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
+                                    
+                                    <script>
+                                    const xValues = ["Knowledge", "Tracing", "Explaining", "Writing"];
+                                    const yValues = [55, 49, 44, 24];
+                                    const barColors = [
+                                      "#b91d47",
+                                      "#00aba9",
+                                      "#2b5797",
+                                      "#e8c3b9",
+                                      "#1e7145"
+                                    ];
+                                    
+                                    new Chart("myChart", {
+                                      type: "pie",
+                                      data: {
+                                        labels: xValues,
+                                        datasets: [{
+                                          backgroundColor: barColors,
+                                          data: yValues
+                                        }]
+                                      },
+                                      options: {
+                                        title: {
+                                          display: true,
+                                          text: "Conpatency"
+                                        }
+                                      }
+                                    });
+                                    </script>
+                                    
+                                    </body>
+                                </td>
                                 </tr>
                             <%
                         } 
