update home student

--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -165,7 +165,7 @@
                 <div class="group">
                     <div>
                         <div class="boxbax">
-                            <p style="margin: 0;">Progress</p>
+                            <p style="margin: 0;">Lab Progress</p>
                             <div style="display: flex;">
                                 <div class="progress" style="background-color: #e2ddc8;">
                                     <div style=" width: <%= TicketBooking_SystemPercent %>%;" class="progressvalue"></div>
@@ -374,7 +374,7 @@
                 <div class="group2" style="width: 800px;">
                     <div class="boxbax2">  
                         <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0" style="width: 100%;">
-                            <p style="margin: 0;">Pre-test</p>
+                            <p style="margin: 0;">Lab Pre-test</p>
                             <b style="font-size: 12px;">Knowledge: <%= PreBasic %> /40</b>
                             <div class="progress" style="background-color: #e2ddc8;">
                                 <div style=" width: <%= PreBasicPercent %>%;" class="progressvalue">
@@ -405,7 +405,7 @@
 
                     <div class="boxbax2">
                         <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0" style="width: 100%;">
-                            <p style="margin: 0;">Post-test</p>
+                            <p style="margin: 0;">Lab Post-test</p>
                             <b style="font-size: 12px;">Knowledge: <%= Basic %> /40</b>
                             <div class="progress" style="background-color: #e2ddc8;">
                                 <div style=" width: <%= BasicPercent %>%;" class="progressvalue">
