--- a/views/teacher/class.ejs
+++ b/views/teacher/class.ejs
@@ -30,7 +30,7 @@
 
 <div id = "content" class="container" style="background-color: #cad19f;">
 
-    <%- include('./class-Student') %>
+    <%- include('../teacher/class-Student') %>
 
     <div class="box mb-5 shadow" style="background-color: #cad19f;">
         <!-- <table class="table" style="background-color: #9C7EB7;">
