--- a/views/teacher/class-Student.ejs
+++ b/views/teacher/class-Student.ejs
@@ -4,8 +4,8 @@
             <thead>
               <tr>
                 <th scope="col" class="col-1">#</th>
-                <th scope="col-1" class="col-1"><%=Studentresult[0].email %></th>
-                <th scope="col-1" class="col-1"><%=Studentresult[0].ClassName %></th>
+                <th scope="col-1" class="col-1">email</th>
+                <th scope="col-1" class="col-1">Class</th>
                 <th scope="col" class="col-2 text-start">Project</th>
                 <th scope="col" class="col-2 text-start">Score</th>
                 <th scope="col" class="col-4 text-start">Chart</th>
