--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -165,7 +165,7 @@
                 <div class="group">
                     <div>
                         <div class="boxbax">
-                            <p style="margin: 0;">Lab Progress</p>
+                            <p style="margin: 0;">Lab Progress (Post-test)</p>
                             <div style="display: flex;">
                                 <div class="progress" style="background-color: #e2ddc8;">
                                     <div style=" width: <%= TicketBooking_SystemPercent %>%;" class="progressvalue"></div>
