--- a/views/index/index_teacher.ejs
+++ b/views/index/index_teacher.ejs
@@ -101,14 +101,14 @@
                         datasets: [{
                             data: [15,20,15,30],
                             label: "Pre-test",
-                            borderColor: '#80599f',
-                            backgroundColor: '#80599f49',
+                            borderColor: '#2F3C3D',
+                            backgroundColor: '#66B7BDcf',
                         },{
                             data: [50,55,45,40],
                             label: "Post-test",
-                            borderColor: '#d272e7',
+                            borderColor: '#2F3C3D',
                             fill: true,
-                            backgroundColor: '#d272e737',
+                            backgroundColor: '#bd7b67cf',
                         }]
                     };
                     // config 
