--- a/views/teacher/class-Student.ejs
+++ b/views/teacher/class-Student.ejs
@@ -51,7 +51,7 @@
                                     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
                                     <body>
                                     
-                                    <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
+                                    <canvas id="myChart" style="width:100%;max-width:400px"></canvas>
                                     
                                     <script>
                                     const xValues = ["Knowledge", "Tracing", "Explaining", "Writing"];
@@ -76,7 +76,7 @@
                                       options: {
                                         title: {
                                           display: true,
-                                          text: "Conpatency"
+                                          text: "Competency"
                                         }
                                       }
                                     });
