--- a/views/teacher/class-Student.ejs
+++ b/views/teacher/class-Student.ejs
@@ -21,30 +21,30 @@
                                 <td><%=Studentresult[i].email %></td>
                                 <td><%=Studentresult[i].ClassName %></td>
                                 <td class="text-start">
-                                    Project QUIZ1 | <%=Studentresult[i].TicTacToe %> <br>
-                                    Project QUIZ2 | <%=Studentresult[i].LibrarySystem %> <br> 
-                                    Project QUIZ3 | <%=Studentresult[i].Roshambo %> <br>
+                                    Project QUIZ1 | <%=Studentresult[i].TicketBookingSystem %> <br>
+                                    Project QUIZ2 | <%=Studentresult[i].PointofSalesSystem %> <br> 
+                                    Project QUIZ3 | <%=Studentresult[i].Project_QUIZ3 %> <br>
                                 
                                 </td>
                                 <td class="text-start">
                                     <% if(Studentresult[i].infoPrePostTest != undefined){ %>
                                 <% } else{ %>  
                                     Algorithms and Flowcharts :
-                                    <br> &nbsp &nbspQuiz | <%=Studentresult[i].Introduction %> <br>
+                                    <br> &nbsp &nbspQuiz | <%=Studentresult[i].Algorithms_and_Flowcharts %> <br>
                                     Datatype and Variable :
-                                    <br> &nbsp &nbspQuiz | <%=Studentresult[i].String %> <br>
+                                    <br> &nbsp &nbspQuiz | <%=Studentresult[i].Datatype_and_Variable %> <br>
                                     Input and Output :
-                                    <br> &nbsp &nbspQuiz | <%=Studentresult[i].Datatype %> <br> 
+                                    <br> &nbsp &nbspQuiz | <%=Studentresult[i].Input_and_Output %> <br> 
                                     Operators and Expressions :
-                                    <br> &nbsp &nbspQuiz | <%=Studentresult[i].Operators %> <br>
+                                    <br> &nbsp &nbspQuiz | <%=Studentresult[i].Operators_and_Expressions %> <br>
                                     Selection Statements  :
-                                    <br> &nbsp &nbspQuiz | <%=Studentresult[i].FlowControl %> <br> 
+                                    <br> &nbsp &nbspQuiz | <%=Studentresult[i].Selection_Statements %> <br> 
                                     Loop Statements  :
-                                    <br> &nbsp &nbspQuiz | <%=Studentresult[i].Loop %> <br> 
+                                    <br> &nbsp &nbspQuiz | <%=Studentresult[i].Loop_Statements %> <br> 
                                     Arrays and Strings :
-                                    <br> &nbsp &nbspQuiz | <%=Studentresult[i].Pointers %> <br>
+                                    <br> &nbsp &nbspQuiz | <%=Studentresult[i].Arrays_and_Strings %> <br>
                                     Functions : 
-                                    <br> &nbsp &nbspQuiz | <%=Studentresult[i].Function %> <br>
+                                    <br> &nbsp &nbspQuiz | <%=Studentresult[i].Functions %> <br>
                                 <% } %>
                             </td>
                                 <td>
