--- a/views/teacher/class-Student.ejs
+++ b/views/teacher/class-Student.ejs
@@ -21,29 +21,32 @@
                                 <td><%=Studentresult[i].email %></td>
                                 <td><%=Studentresult[i].ClassName %></td>
                                 <td class="text-start">
-                                    Project QUIZ1 | <%=Studentresult[i].TicketBookingSystem %> <br>
-                                    Project QUIZ2 | <%=Studentresult[i].PointofSalesSystem %> <br> 
-                                    Project QUIZ3 | <%=Studentresult[i].Project_QUIZ3 %> <br>
+                                    Project QUIZ1 
+                                    <br> &nbsp &nbsp| <%=Studentresult[i].TicketBookingSystem %> <br>
+                                    Project QUIZ2 
+                                    <br> &nbsp &nbsp| <%=Studentresult[i].PointofSalesSystem %> <br> 
+                                    Project QUIZ3 
+                                    <br> &nbsp &nbsp| <%=Studentresult[i].Project_QUIZ3 %> <br>
                                 
                                 </td>
                                 <td class="text-start">
                                     <% if(Studentresult[i].infoPrePostTest != undefined){ %>
                                 <% } else{ %>  
-                                    Algorithms and Flowcharts :
+                                    Algorithms and Flowcharts
                                     <br> &nbsp &nbspQuiz | <%=Studentresult[i].Algorithms_and_Flowcharts %> <br>
-                                    Datatype and Variable :
+                                    Datatype and Variable
                                     <br> &nbsp &nbspQuiz | <%=Studentresult[i].Datatype_and_Variable %> <br>
-                                    Input and Output :
+                                    Input and Output
                                     <br> &nbsp &nbspQuiz | <%=Studentresult[i].Input_and_Output %> <br> 
-                                    Operators and Expressions :
+                                    Operators and Expressions
                                     <br> &nbsp &nbspQuiz | <%=Studentresult[i].Operators_and_Expressions %> <br>
-                                    Selection Statements  :
+                                    Selection Statements 
                                     <br> &nbsp &nbspQuiz | <%=Studentresult[i].Selection_Statements %> <br> 
-                                    Loop Statements  :
+                                    Loop Statements
                                     <br> &nbsp &nbspQuiz | <%=Studentresult[i].Loop_Statements %> <br> 
-                                    Arrays and Strings :
+                                    Arrays and Strings
                                     <br> &nbsp &nbspQuiz | <%=Studentresult[i].Arrays_and_Strings %> <br>
-                                    Functions : 
+                                    Functions 
                                     <br> &nbsp &nbspQuiz | <%=Studentresult[i].Functions %> <br>
                                 <% } %>
                             </td>
