update home teacher

--- a/views/index/index_teacher.ejs
+++ b/views/index/index_teacher.ejs
@@ -150,6 +150,23 @@
                     </div>
                 </div>
             </div>
+            <div style="margin-left: 15px;">
+                <div class="col" style="display: flex;">
+                    <div class="card-body">
+                        <h5 class="card-title">Lab 1</h5>
+                        <div class="pie animate" style="--p:<%= IntroductionScore*4 %>;--c:#bd7b67; font-size: 14px;"> <%= IntroductionScore %></div>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Quiz 2</h5>
+                        <div class="pie animate" style="--p:<%= StringScore*4 %>;--c:#bd7b67; font-size: 14px;"> <%= StringScore %></div>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">Quiz 3</h5>
+                        <div class="pie animate" style="--p:<%= DatatypeScore*4 %>;--c:#bd7b67; font-size: 14px;"> <%= DatatypeScore %></div>
+                    </div>
+                </div>
+                
+        </div>
             <div class="col-sm" >
                 <div class="box mb-5 " style="background-color: #cad19f">
                     <div lang="ja">
@@ -162,6 +179,22 @@
                               </ol>
                         </p>
                     </div>
+                    <div style="margin-left: 15px;">
+                        <div class="col" style="display: flex;">
+                            <div class="card-body">
+                                <h5 class="card-title">Quiz 1</h5>
+                                <div class="pie animate" style="--p:<%= TicTacToeScore*4 %>;--c:#bd7b67; font-size: 14px;"> <%= TicTacToeScore %></div>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Quiz 2</h5>
+                                <div class="pie animate" style="--p:<%= LibrarySystemScore*4 %>;--c:#bd7b67; font-size: 14px;"> <%= LibrarySystemScore %></div>
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Quiz 3</h5>
+                                <div class="pie animate" style="--p:<%= RoshamboScore*4 %>;--c:#bd7b67; font-size: 14px;"> <%= RoshamboScore %></div>
+                            </div>
+                        </div>
+                        
                 </div>
             </div>
 
