--- a/views/index/index_teacher.ejs
+++ b/views/index/index_teacher.ejs
@@ -82,11 +82,11 @@
         </div>
         </div>
         
-        <div>
+        <div style="width: 400px;">
             <h4 class="chakra-petch-regular" style="width: 100px;">Skill</h4>   
-            <div >
+            <div>
                 <div class="chartCard">
-                    <div class="chartBox" style="background-color: #e2ddc8; border: solid #fff;">
+                    <div class="chartBox" style="background-color: #e2ddc8; border: solid #fff; width: 400px;">
                         <canvas id="myChart"></canvas>
                     </div>
                 </div>
