--- a/views/teacher/check.ejs
+++ b/views/teacher/check.ejs
@@ -99,7 +99,7 @@
                             <!--ข้อที่ 16-->
                             <div class="input-group mb-3">
                                 <span class="input-group-text"><b>โจทย์ 16</b></span>
-                                <iframe src=" <%= student[0].ADRI  %> " width="50%" height="480" allow="autoplay"></iframe>
+                                <iframe src=" <%= student[0].ADRI1 %> " width="50%" height="480" allow="autoplay"></iframe>
                             </div>
                             
                         </div>
@@ -151,7 +151,7 @@
                         <!--ข้อที่ 17-->
                         <div class="input-group mb-3">
                             <span class="input-group-text"><b>โจทย์ 17</b></span>
-                            <iframe src=" <%= student[0].ADRI  %> " width="50%" height="480" allow="autoplay"></iframe>
+                            <iframe src=" <%= student[0].ADRI2  %> " width="50%" height="480" allow="autoplay"></iframe>
                         </div>
                         
                     </div>
@@ -187,7 +187,7 @@
                     <!--ข้อที่ 18-->
                     <div class="input-group mb-3">
                         <span class="input-group-text"><b>โจทย์ 18</b></span>
-                        <iframe src=" <%= student[0].ADRI  %> " width="50%" height="480" allow="autoplay"></iframe>
+                        <iframe src=" <%= student[0].ADRI3  %> " width="50%" height="480" allow="autoplay"></iframe>
                     </div>
                     
                 </div>
@@ -223,7 +223,7 @@
                 <!--ข้อที่ 19-->
                 <div class="input-group mb-3">
                     <span class="input-group-text"><b>โจทย์ 19</b></span>
-                    <iframe src=" <%= student[0].ADRI  %> " width="50%" height="480" allow="autoplay"></iframe>
+                    <iframe src=" <%= student[0].ADRI4  %> " width="50%" height="480" allow="autoplay"></iframe>
                 </div>
                 
             </div>
@@ -258,7 +258,7 @@
             <!--ข้อที่ 20-->
             <div class="input-group mb-3">
                 <span class="input-group-text"><b>โจทย์ 20</b></span>
-                <iframe src=" <%= student[0].ADRI  %> " width="50%" height="480" allow="autoplay"></iframe>
+                <iframe src=" <%= student[0].ADRI5  %> " width="50%" height="480" allow="autoplay"></iframe>
             </div>
             
         </div>
