--- a/views/teacher/class.ejs
+++ b/views/teacher/class.ejs
@@ -26,9 +26,10 @@
 </head>
 
 <%- include('../layouts/header') %>
+<body style="background-color: #cad19f;">
 <br><br><br>
 
-<div id = "content" class="container" style="background-color: #cad19f;">
+<div id = "content" class="container" style="background-color: #bd7b67;">
 
     <%- include('../teacher/class-Student') %>
 
@@ -54,9 +55,9 @@
     </div>
 
     <h1>Class Management</h1>
-    <div class="row" style="background-color: #cad19f;">
+    <div class="row" style="background-color: #bd7b67;">
         <div class="col-sm">
-            <div class="box  mb-5 shadow" style="background-color: #bd7b67;">
+            <div class="box  mb-5 shadow" style="background-color: #eaeaea;">
                 <table class="table">
                     <thead>
                       <tr>
