--- a/views/student/pretest/1_Algorithms_and_Flowcharts-pretest.ejs
+++ b/views/student/pretest/1_Algorithms_and_Flowcharts-pretest.ejs
@@ -509,7 +509,7 @@ function countTimer() {
                     และเขียนตอบคำถามว่า โปรแกรมนี้คือโปรแกรคำนวณค่าอะไร (3 คะแนน)
                 </p>
                 <div class="group" style="margin: 20px;">
-                    <iframe src="https://drive.google.com/file/d/1MPevV4k9LkzOjqrxAHvA08qs27XNpqxk/preview" width="400" height="480" allow="autoplay"></iframe>
+                    <iframe src="<%= ADRI1 %>" width="400" height="480" allow="autoplay"></iframe>
 
                 <div class="form-group">
                     <textarea style="height: 400px;" class="form-control" id="lineCounter" readonly rows="10">1 </textarea>
@@ -538,7 +538,7 @@ function countTimer() {
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #8c521f;">
                     17.1 (Deployment) ให้วาดรูป Flowchart ของ Algorithm โปรแกรมแปลงอุณหภูมิ Celsius (C) เป็น Fahrenheit (F) ต่อไปนี้ให้ถูกต้อง  <br>
                     (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (3 คะแนน)
-                    <iframe src="https://drive.google.com/file/d/1y_OuR6vmKvC7ucsPYgurPV43a350W4-D/preview" width="100%" height="480" allow="autoplay"></iframe>                
+                    <iframe src="<%= ADRI2 %>" width="100%" height="480" allow="autoplay"></iframe>                
                 </p><br>
 
                     <div class="group3 bg-dark">
@@ -570,7 +570,7 @@ function countTimer() {
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #366241;">
                     18.1 (Deployment) ให้เขียน Flowchart ของโปรแกรมตัดเกรด โดยให้มีการรับค่าของตัวแปร และแสดงค่าของข้อมูลดังนี้  <br>
                     (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (3 คะแนน)
-                    <iframe src="https://drive.google.com/file/d/1lYWF0-KxUkVRufld0_ECkov6fIpVfPL0/preview" width="100%" height="480" allow="autoplay"></iframe>
+                    <iframe src="<%= ADRI3 %>" width="100%" height="480" allow="autoplay"></iframe>
                 </p><br>
                     
                     <div class="group3 bg-dark">
@@ -601,7 +601,7 @@ function countTimer() {
                         19.1 (Deployment)  ให้เขียน Flowchart ของโปรแกรมแปลงอุณหภูมิ พิมพ์  F คือการแปลง Celcius เป็น Fahrenheit <br>
                         และพิมพ์ C คือการแปลง Fahrenheit เป็น Celcius โดยรับค่าของตัวแปร ทำการคำนวณ และแสดงค่าของข้อมูลดังนี้  <br>
                         (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (3 คะแนน)
-                        <iframe src="https://drive.google.com/file/d/1w737Hm85h6icIA0eL-N75Ul4Sca8sQtH/preview" width="100%" height="480" allow="autoplay"></iframe>                
+                        <iframe src="<%= ADRI4 %>" width="100%" height="480" allow="autoplay"></iframe>                
                     </p><br>
                     <div class="group3 bg-dark">
                         
@@ -631,7 +631,8 @@ function countTimer() {
                     <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #687521;">
                         20.1 (Deployment) ให้เขียน Flowchart โปรแกรมคำนวณดอกเบี้ยเงินฝากธนาคารจากโจทย์ที่กำหนดให้  <br>
                         (ใช้ draw.io ในการวาด และเขียนชื่อ นามสกุล รหัสนักศึกษา) ส่งเป็น Link ของ draw.io โดยที่หน้าเว็บ draw.io ไปที่เมนู File -> Export -> URL -> Copy Link ส่ง (3 คะแนน)
-                        <iframe src="https://drive.google.com/file/d/163DxCROxDpO2yF6jer4NJRhdMo1uS1VR/preview" width="100%" height="480" allow="autoplay"></iframe>                    </p><br>  
+                        <iframe src="<%= ADRI5 %>" width="100%" height="480" allow="autoplay"></iframe>                    
+                    </p><br>  
 
                         <div class="group3 bg-dark">
                         <b style="color: #ff8821;">Draw.io</b>
