--- a/views/student/pretest/2_Datatype_and_Variable-pretest.ejs
+++ b/views/student/pretest/2_Datatype_and_Variable-pretest.ejs
@@ -541,7 +541,7 @@
                     (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                 </p>
                 <div  style="margin: 20px;">
-                    <iframe src="https://drive.google.com/file/d/15JtyzFIcjkP-t5ioDrPaece38SmBv4No/preview" width="100%" height="600" allow="autoplay"></iframe>
+                    <iframe src="<%= ADRI1  %>" width="100%" height="600" allow="autoplay"></iframe>
                 </div>
                     <div class="form-group">
                     <!--<button type="button" style="color: black;" class="btn btn-outline-danger " data-bs-toggle="modal" data-bs-target="#staticBackdrop2">
@@ -573,7 +573,7 @@
                     (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                 </p>
                 <div  style="margin: 20px;">
-                    <iframe src="https://drive.google.com/file/d/1osQnRL5Jqkc4xR3FHW5vw17JXqgGcfAW/preview" width="100%" height="600" allow="autoplay"></iframe>                <div class="form-group">
+                    <iframe src="<%= ADRI2  %>" width="100%" height="600" allow="autoplay"></iframe>                <div class="form-group">
                 </div>    
                 <div class="form-group">
                         <a class="btn btn-success" href="https://www.onlinegdb.com/" target="_blank">OnlineGDB</a><br>
@@ -600,7 +600,7 @@
                     (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                 </p>
                 <div  style="margin: 20px;">
-                    <iframe src="https://drive.google.com/file/d/1KUivgO6uXy1YT9iw0aNTGeDNyEiz_CPT/preview" width="100%" height="600" allow="autoplay"></iframe>                    <div class="group2">
+                    <iframe src="<%= ADRI3  %>" width="100%" height="600" allow="autoplay"></iframe>                    <div class="group2">
                 </div>
                 <div class="form-group">
                     <a class="btn btn-success" href="https://www.onlinegdb.com/" target="_blank">OnlineGDB</a>
@@ -630,7 +630,7 @@
                     (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                 </p>
                 <div  style="margin: 20px;">
-                    <iframe src="https://drive.google.com/file/d/1A4vDFT5BVSgZhqcdNHrdJXWvsFdA7fau/preview" width="100%" height="600" allow="autoplay"></iframe>                    <div class="group2">
+                    <iframe src="<%= ADRI4 %>" width="100%" height="600" allow="autoplay"></iframe>                    <div class="group2">
                 </div>
                 <div class="form-group">
                     <a class="btn btn-success" href="https://www.onlinegdb.com/" target="_blank">OnlineGDB</a>
@@ -659,7 +659,7 @@
                     (ส่งเป็น Link URL ของ OnlineGDB เมื่อเขียนโค้ดเสร็จ -> กด Share -> Copy ช่อง Share Code)
                 </p>
                 <div  style="margin: 20px;">
-                    <iframe src="https://drive.google.com/file/d/1CnAqlO3WcbvGuckORcpOyhaWT_vQdgR9/preview" width="100%" height="600" allow="autoplay"></iframe>                <div class="form-group">
+                    <iframe src="<%= ADRI5 %>" width="100%" height="600" allow="autoplay"></iframe>                <div class="form-group">
                     </div>
                     <div class="form-group">
                         <a class="btn btn-success" href="https://www.onlinegdb.com/" target="_blank">OnlineGDB</a>
