--- a/views/teacher/class-Student.ejs
+++ b/views/teacher/class-Student.ejs
@@ -1,6 +1,6 @@
 <h1>Student</h1>
-    <div class="box mb-5 shadow" style="background-color: #cad19f;;">
-        <table class="table" style="background-color: #bd7b67;">
+    <div class="box mb-5 shadow" style="background-color: #bd7b67;;">
+        <table class="table" style="background-color: #eaeaea;">
             <thead>
               <tr>
                 <th scope="col" class="col-1">#</th>
