--- a/views/index/index_teacher.ejs
+++ b/views/index/index_teacher.ejs
@@ -44,7 +44,7 @@
     <!-- end of Narbar-->
 
 <br><br><br>
-    <div id = "content" class="container" style="background-color: #cad19f;">
+    <div id = "content" class="container" >
         <div  class="group2">
         <div class="box-skill" style="background-color: #cad19f;" >
         <h1>Student Summary Skills</h1>
@@ -82,7 +82,8 @@
         </div>
         </div>
         
-        <div style="width: 400px;">
+        <div>
+            
             <h4 class="chakra-petch-regular" style="width: 100px;">Skill</h4>   
             <div>
                 <div class="chartCard">
