--- a/views/teacher/check.ejs
+++ b/views/teacher/check.ejs
@@ -31,7 +31,7 @@
     <title>Home</title>
 </head>
 
-<body>
+<body style="background-color: #cad19f;">
     <!-- Narbar-->
     <%- include('../layouts/navbar') %>
     <!-- end of Narbar-->
@@ -65,8 +65,12 @@
                         <div class="row align-items-start">
                             <div class="col">
                                 <div class="input-group mb-3">
-                                    <span class="input-group-text"><b>EMAIL</b></span>
+                                    <span class="input-group-text"><b>E-mail</b></span>
                                     <span class="input-group-text text-uppercase"><%= student[0].email %> </span>
+                                </div>
+                                <div class="input-group mb-3">
+                                    <span class="input-group-text"><b>Name</b></span>
+                                    <span class="input-group-text text-uppercase"><%= student[0].name %> </span>
                                 </div>
                                 <div class="input-group mb-3">
                                     <span class="input-group-text"><b>เวลาที่ส่ง</b></span>
