--- a/views/index/index_teacher.ejs
+++ b/views/index/index_teacher.ejs
@@ -154,6 +154,15 @@
             <div style="margin-left: 15px;">
                 <div class="col">
                     <div  style="display: flex;">
+                        <p class="card-title" style="width: 50px;">Lab 1 Pre</p>
+                        <div class="TeacherBar">
+                            <div style="background-color: #bd7b67; --w :<%= PreIntroductionScore %>%; " class="TeacherBarValue">
+                                <%= PreIntroductionScore %>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div  style="display: flex;">
                         <p class="card-title" style="width: 50px;">Lab 1</p>
                         <div class="TeacherBar">
                             <div style="background-color: #bd7b67; --w :<%= IntroductionScore %>%; " class="TeacherBarValue">
